--- a/app/styles/less/media-queries-services-blocks.less
+++ b/app/styles/less/media-queries-services-blocks.less
@@ -1,6 +1,9 @@
 @media screen and (min-width: 40rem) {
 	section.services-blocks {
 		font-size:1em;
+		.column.third {
+			width:100%;
+		}
 	}
 }
 @media screen and (min-width: 68rem) {
@@ -14,9 +17,12 @@
 				ul {
 					padding-top:1rem;
 					li {
-						width:auto;
+						font-size:1.1em;
 					}
 				}
+			}
+			.column.third {
+				width:33.3%;
 			}
 		}
 	}
