--- a/app/styles/less/services-blocks.less
+++ b/app/styles/less/services-blocks.less
@@ -25,6 +25,7 @@ section.services-blocks {
 				font-family:@secondary-font;
 				font-size:1.3em;
 				text-align:left;
+				color:@text-grey;
 			}
 			ul {
 				text-align:center;
@@ -39,21 +40,7 @@ section.services-blocks {
 					padding-right:2rem;
 					padding-top:0.5rem;
 					padding-bottom:0.5rem;
-					font-size:1.8em;
-				}
-			}
-		}
-	}
-	.block-marketing {
-		.title-and-text {
-			ul {
-				li {
-					font-family:@primary-font-med;
-					ul {
-						li {
-							font-size:0.8em;
-						}
-					}
+					font-size:1.4em;
 				}
 			}
 		}
