--- a/app/styles/less/about-our-vision.less
+++ b/app/styles/less/about-our-vision.less
@@ -15,5 +15,12 @@ section.our-vision {
 				font-size:1.5em;
 			}
 		}
+		h4 {
+			font-family:@primary-font-reg;
+			color:black;
+			text-transform:uppercase;
+			font-weight:normal;
+			font-size:1.2em;
+		}
 	}
 }
