--- a/app/styles/less/about-team.less
+++ b/app/styles/less/about-team.less
@@ -38,6 +38,48 @@ section.team {
 		padding-left:2rem;
 		padding-right:2rem;
 		margin-top:2rem;
+		.team-member-image {
+			width:200px;
+			height:200px;
+			background-size:cover;
+			background-position:center;
+		}
+		.sam-lyons {
+			background-image:url(../../images/sam-lyons.jpg);
+		}
+		.marie-therese {
+			background-image:url(../../images/sam-lyons.jpg);
+		}
+		.artur-leitis {
+			background-image:url(../../images/sam-lyons.jpg);
+		}
+		.philip-corbally {
+			background-image:url(../../images/sam-lyons.jpg);
+		}
+		.andre-lacerda {
+			background-image:url(../../images/andre-lacerda.jpg);
+		}
+		.robert-kamenicky {
+			background-image:url(../../images/sam-lyons.jpg);
+		}
+		.aidan-mccarthy {
+			background-image:url(../../images/aidan-mccarthy.jpg);
+		}
+		.carol-hevia {
+			background-image:url(../../images/carol-hevia.jpg);
+		}
+		.conor-fleming {
+			background-image:url(../../images/conor-fleming.jpg);
+		}
+		.emma-carroll {
+			background-image:url(../../images/emma-carroll.jpg);
+		}
+		.juliana-scodeler {
+			background-image:url(../../images/juliana-scodeler.jpg);
+		}
+		.jaroslaw-narkiewicz {
+			background-image:url(../../images/jaroslaw-narkiewicz.jpg);
+		}
 	}
 	.team-member-overlay {
 		background:@primary-color;
