--- a/app/styles/less/connect-contact.less
+++ b/app/styles/less/connect-contact.less
@@ -43,7 +43,9 @@
 
 section.contact {
 	background:white;
-	padding:5rem;
+	padding-top:3rem;
+	padding-bottom:5rem;
+	border-bottom:1px solid @primary-color;
 }
 .contact-form {
 	position:relative;
