--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -20,6 +20,7 @@
 @import "services-blocks";
 @import "connect-header";
 @import "connect-contact";
+@import "connect-social-media";
 @import "footer";
 @import "media-queries-navbar";
 @import "media-queries-home-header";
@@ -30,5 +31,6 @@
 @import "media-queries-about-why-and-vision";
 @import "media-queries-about-team";
 @import "media-queries-services-blocks";
+@import "media-queries-connect";
 @import "keyframes";
 @import "modernizr";
