--- a/app/styles/less/footer.less
+++ b/app/styles/less/footer.less
@@ -1,8 +1,18 @@
-section.footer {
-	height:20rem;
-	background:white;
-	p {
-		margin:0;
-		padding:5rem;
+footer {
+	background-image:url(../../images/fuses.jpg);
+	background-size:cover;
+	background-position:center;
+	color:white;
+	font-family:@secondary-font;
+	width:100%;
+	display:none;
+	.column.full {
+		height:100%;
+		background:rgba(0, 0, 0, 0.7);
+		padding-top:5rem;
+		padding-bottom:5rem;
+	}
+	.flow-opposite {
+		text-align:right;
 	}
 }
