--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -21,6 +21,7 @@
 @import "connect-header";
 @import "connect-contact";
 @import "connect-social-media";
+@import "connect-map";
 @import "footer";
 @import "media-queries-navbar";
 @import "media-queries-home-header";
@@ -32,5 +33,6 @@
 @import "media-queries-about-team";
 @import "media-queries-services-blocks";
 @import "media-queries-connect";
+@import "media-queries-headers";
 @import "keyframes";
 @import "modernizr";
