--- a/app/styles/less/media-queries-connect.less
+++ b/app/styles/less/media-queries-connect.less
@@ -11,6 +11,21 @@
 			padding:2rem;
 		}
 	}
+	section.map {
+		p {
+			font-size:2em;
+		}
+		.google-map {
+			padding-bottom:40%;
+		}
+	}
+}
+@media screen and (min-width: 48rem) {
+	section.map {
+		.google-map {
+			padding-bottom:30%;
+		}
+	}
 }
 @media screen and (min-width: 68rem) {
 	section.contact {
