--- a/app/styles/less/about-header.less
+++ b/app/styles/less/about-header.less
@@ -6,11 +6,12 @@ header.about-header {
 	width:100%;
 	height:100vh;
 }
-.header-text {
+.about-header-text {
 	width:100%;
 	top:40vh;
 	color:white;
 	z-index:-1;
+	font-size:0.5em;
 	h1 {
 		font-size:7em;
 		margin:0;
