--- a/app/styles/less/connect-social-media.less
+++ b/app/styles/less/connect-social-media.less
@@ -15,22 +15,13 @@ section.social-media {
 		padding:1rem;
 		font-size:1.5em;
 		color:@secondary-color;
+		-webkit-transition: color 0.2s;
+		transition: color 0.2s;
+		-moz-transition: color 0.2s;
+		-o-transition: color 0.2s;
+		-ms-transition: color 0.2s;
+		&:hover {
+			color:@secondary-color - 50;
+		}
 	}
-}
-
-section.map {
-	.google-map {
-        position: relative;
-        padding-bottom: 35%; // This is the aspect ratio
-        height: 0;
-        overflow: hidden;
-    }
-    .google-map iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100% !important;
-        height: 100% !important;
-    }
-
 }
